# Sable

./: .env.example  .gitignore  ARCHITECTURE.md  HACKATHON.md  KIMI_PROMPTS.md  KIMI_PROMPTS_AMENDMENT_03.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: next.config.js  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActionPanel.tsx  ActivityFeed.tsx  AppHeader.tsx  BalanceList.tsx  CompleteSetupModal.tsx  DelegationStatus.tsx  FundModal.tsx  TasksView.tsx  TreasuryView.tsx  UserStatus.tsx  WalletConnect.tsx  X402DemoView.tsx
app/src/contexts/: WalletContext.tsx
app/src/idl/: sable.json
app/src/utils/: env.ts
docs/: amendment-03-gap-analysis.md  architecture.md  demo-video-script.md  devnet-state.md  magicblock-integration.md  x402-integration.md
programs/l2conceptv1/: Anchor.toml  Cargo.toml  tsconfig.json
programs/l2conceptv1/src/: error.rs  events.rs  lib.rs
programs/l2conceptv1/tests/: l2conceptv1.ts
programs/sable/: Anchor.toml  Cargo.toml
programs/sable/src/: error.rs  events.rs  lib.rs  magicblock.rs  state.rs
programs/sable/src/instructions/: mod.rs
programs/sable/src/instructions/agent/: agent_transfer.rs  agent_transfer_batch.rs  close_agent.rs  defund_agent.rs  freeze_agent.rs  fund_agent.rs  mod.rs  revoke_agent.rs  spawn_agent.rs  unfreeze_agent.rs
programs/sable/src/instructions/auction/: cancel_task.rs  create_task.rs  mod.rs
programs/sable/tests/: agent-transfer.ts  auction-create.ts  parent-control.ts  sable.ts
scripts/: build.sh  deploy.sh  idl-sync.js  install-toolchain.sh  test-integration.sh  test-x402.sh
services/per-mock-middleware/: package-lock.json  package.json
services/x402-facilitator/: package.json
tests/integration/: 01-treasury.spec.ts  02-agents.spec.ts  03-policy.spec.ts  04-auctions.spec.ts  05-delegation.spec.ts  06-per-permissions.spec.ts  07-x402.spec.ts  08-private-payments-api.spec.ts
(+25 files in other folders)
