[package]
name = "sable"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
blake3 = "=1.5.5"

# Note: MagicBlock ephemeral-rollups-sdk can be added here when compatible with Anchor 0.32.x
# For now, MagicBlock integration uses event-based delegation requests
# that the MagicBlock indexer can process.
